--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=SoftSPI
-version=1.0.3
+version=1.0.4
 author=Matt Jenkins
 maintainer=Matt Jenkins <matt@majenko.co.uk>
 sentence=Software SPI implementation
 paragraph=SoftSPI\n=======\n\nSoftware SPI class for Arduino\n
 url=https://github.com/MajenkoLibraries/SoftSPI
-category=Communication
+category=Communications
 architectures=*
 includes=SoftSPI.h
