--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=SoftSPI
-version=1.0.4
+version=1.0.5
 author=Matt Jenkins
 maintainer=Matt Jenkins <matt@majenko.co.uk>
 sentence=Software SPI implementation
 paragraph=SoftSPI\n=======\n\nSoftware SPI class for Arduino\n
 url=https://github.com/MajenkoLibraries/SoftSPI
-category=Communications
+category=Communication
 architectures=*
 includes=SoftSPI.h
